--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ html-template
 bin-debug
 bin-release
 bin
-www
 air
 docs
 .settings
@@ -11,3 +10,4 @@ docs
 .git
 .flexLibProperties
 Thumbs.db
+/source
